--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+<!-- Connect Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+
+<!-- Connect Bootstrap JavaScript and its dependencies -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Connect Font Awesome -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Bulletin Board Bootstrapped</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -18,13 +30,13 @@
     <hr>
 
     <% if notice.present? %>
-      <div style="color: green">
+      <div class="alert alert-warning" role="alert" class="col-6">
         <%= notice %>
       </div>
     <% end %>
 
     <% if alert.present? %>
-      <div style="color: red">
+      <div class="alert alert-warning" role="alert" class="col-6">
         <%= alert %>
       </div>
     <% end %>
