--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -32,12 +32,11 @@
 
 <hr>
 
-<ul>
-  <% @list_of_boards.each do |a_board| %>
-    <li>
-      <a href="/boards/<%= a_board.id %>">
-        <%= a_board.name %>
-      </a>
-    </li>
-  <% end %>
-</ul>
+<div class="card" style="width: 18rem;">
+  <ul class="list-group list-group-flush">
+   <% @list_of_boards.each do |a_board| %>
+    <li class="list-group-item"><a href="/boards/<%= a_board.id %>">
+        <%= a_board.name %></li>
+    <% end %>
+  </ul>
+</div>
