--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,16 @@
 <html>
   <head>
 
-<!-- Connect Bootstrap CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <!-- Connect Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
 
-<!-- Connect Bootstrap JavaScript and its dependencies -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Connect Bootstrap JavaScript and its dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- Connect Font Awesome -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+    <!-- Connect Font Awesome -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Bulletin Board Bootstrapped</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,21 +22,32 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <nav>
-      <a href="/">Bulletin Board</a>
-    </nav>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Bulletin board</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">All Boards</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <hr>
+  <body>
 
     <% if notice.present? %>
-      <div class="alert alert-warning" role="alert" class="col-6">
+      <div class="alert alert-warning d-flex align-items-center" role="alert" class="col-6">
         <%= notice %>
       </div>
     <% end %>
 
     <% if alert.present? %>
-      <div class="alert alert-warning" role="alert" class="col-6">
+      <div class="alert alert-warning d-flex align-items-center" role="alert" class="col-6">
         <%= alert %>
       </div>
     <% end %>
